--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Yuujiso.github.io/aitumap",
+  "homepage": "https://Saafrac.github.io/aitumap",
   "name": "aitumap",
   "version": "0.2.0",
   "private": false,
